--- a/public/admin.html
+++ b/public/admin.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>🛠 Админ-панель</title>
+  <meta charset="UTF-8">
+  <title>🛠 Админ-панель</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+      text-align: center;
+      padding: 50px;
+    }
+
+    h1 {
+      font-size: 32px;
+      color: #333;
+      margin-bottom: 20px;
+    }
+
+    .button-container {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      max-width: 300px;
+      margin: 0 auto;
+    }
+
+    .btn {
+      padding: 15px;
+      font-size: 16px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .btn-add    { background-color: #4CAF50; color: white; }
+    .btn-edit   { background-color: #2196F3; color: white; }
+    .btn-delete { background-color: #f44336; color: white; }
+    .btn-orders { background-color: #ff9800; color: white; }
+
+    .btn:hover {
+      opacity: 0.9;
+    }
+  </style>
 </head>
 <body>
-    <h1>🛠 Добро пожаловать в админ-панель</h1>
-    <p>Здесь скоро будут кнопки: добавить, удалить, изменить товары.</p>
+
+  <h1>🛠 Добро пожаловать в админ-панель</h1>
+
+  <div class="button-container">
+    <button class="btn btn-add">➕ Добавить товар</button>
+    <button class="btn btn-edit">📝 Изменить товар</button>
+    <button class="btn btn-delete">❌ Удалить товар</button>
+    <button class="btn btn-orders">📦 Посмотреть заказы</button>
+  </div>
+
 </body>
 </html>
