--- a/public/admin.html
+++ b/public/admin.html
@@ -1,59 +1,71 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>🛠 Админ-панель</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Админ-панель</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f7f7f7;
       text-align: center;
-      padding: 50px;
+      padding: 40px 20px;
     }
 
     h1 {
-      font-size: 32px;
-      color: #333;
-      margin-bottom: 20px;
+      font-size: 26px;
+      margin-bottom: 10px;
     }
 
-    .button-container {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-      max-width: 300px;
-      margin: 0 auto;
+    p {
+      font-size: 16px;
+      color: #555;
+      margin-bottom: 30px;
     }
 
     .btn {
-      padding: 15px;
-      font-size: 16px;
+      display: block;
+      width: 75%;
+      max-width: 260px;
+      margin: 12px auto;
+      padding: 12px 18px;
       border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: 0.3s;
+      border-radius: 30px; /* ← Вот здесь круглые края */
+      font-size: 16px;
+      color: white;
+      text-decoration: none;
+      transition: 0.3s ease;
     }
 
-    .btn-add    { background-color: #4CAF50; color: white; }
-    .btn-edit   { background-color: #2196F3; color: white; }
-    .btn-delete { background-color: #f44336; color: white; }
-    .btn-orders { background-color: #ff9800; color: white; }
+    .btn-green {
+      background-color: #28a745;
+    }
+
+    .btn-blue {
+      background-color: #007bff;
+    }
+
+    .btn-red {
+      background-color: #dc3545;
+    }
+
+    .btn-orange {
+      background-color: #fd7e14;
+    }
 
     .btn:hover {
       opacity: 0.9;
+      transform: scale(1.02);
     }
   </style>
 </head>
 <body>
+  <h1>🛠 Добро пожаловать в<br><b>админ-панель</b></h1>
+  <p>Выберите действие ниже:</p>
 
-  <h1>🛠 Добро пожаловать в админ-панель</h1>
-
-  <div class="button-container">
-    <button class="btn btn-add">➕ Добавить товар</button>
-    <button class="btn btn-edit">📝 Изменить товар</button>
-    <button class="btn btn-delete">❌ Удалить товар</button>
-    <button class="btn btn-orders">📦 Посмотреть заказы</button>
-  </div>
-
+  <a href="/add" class="btn btn-green">➕ Добавить</a>
+  <a href="/edit" class="btn btn-blue">📝 Изменить</a>
+  <a href="/delete" class="btn btn-red">❌ Удалить</a>
+  <a href="/orders" class="btn btn-orange">📦 Заказы</a>
 </body>
 </html>
