--- a/public/catalog.html
+++ b/public/catalog.html
@@ -31,7 +31,7 @@
   <div id="orders"></div>
 
   <script>
-    fetch('public/orders.json')
+    fetch('orders.json')
       .then(res => res.json())
       .then(data => {
         const container = document.getElementById('orders');
