--- a/public/catalog.html
+++ b/public/catalog.html
@@ -1,55 +1,85 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Каталог заказов</title>
+  <meta charset="UTF-8" />
+  <title>Добавить товар</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f7f7f7;
+      background: #f4f4f4;
       padding: 20px;
     }
     h2 {
       text-align: center;
+      color: #333;
     }
-    .order {
-      background: #fff;
-      padding: 15px;
-      margin: 10px auto;
+    form {
+      max-width: 400px;
+      margin: auto;
+      background: white;
+      padding: 20px;
       border-radius: 10px;
-      max-width: 500px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
-    .order strong {
-      display: block;
-      margin-bottom: 8px;
+    input, select, button {
+      width: 100%;
+      margin: 10px 0;
+      padding: 10px;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
+    button {
+      background: #28a745;
+      color: white;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+    button:hover {
+      background: #218838;
     }
   </style>
 </head>
 <body>
-  <h2>📦 Заказы</h2>
-  <div id="orders"></div>
+  <h2>➕ Добавить товар</h2>
+  <form id="addForm">
+    <select id="category" required>
+      <option value="">Выберите категорию</option>
+      <option>iPhone</option>
+      <option>Samsung</option>
+      <option>Redmi</option>
+      <option>Realmi</option>
+      <option>Oppo</option>
+      <option>Vivo</option>
+      <option>Huawei</option>
+      <option>Honor</option>
+      <option>Tecno</option>
+      <option>Infinix</option>
+      <option>ZTE</option>
+      <option>WIKO</option>
+    </select>
+
+    <input type="text" id="model" placeholder="Название модели" required />
+    <input type="text" id="quality" placeholder="Качество (Original, OLED...)" required />
+    <input type="number" id="price" placeholder="Цена в сомонӣ" required />
+
+    <button type="submit">Добавить</button>
+  </form>
 
   <script>
-    fetch('orders.json')
-      .then(res => res.json())
-      .then(data => {
-        const container = document.getElementById('orders');
-        data.forEach(order => {
-          const div = document.createElement('div');
-          div.className = 'order';
-          div.innerHTML = 
-            <strong>👤 Имя: ${order.name}</strong>
-            <div>📱 Модели: ${order.models.join(', ')}</div>
-            <div>💰 Общая сумма: ${order.total} сомонӣ</div>
-          ;
-          container.appendChild(div);
-        });
-      })
-      .catch(err => {
-        document.getElementById('orders').innerHTML = 'Ошибка загрузки заказов.';
-        console.error(err);
-      });
+    document.getElementById("addForm").addEventListener("submit", function (e) {
+      e.preventDefault();
+      const item = {
+        category: document.getElementById("category").value,
+        model: document.getElementById("model").value,
+        quality: document.getElementById("quality").value,
+        price: parseInt(document.getElementById("price").value)
+      };
+
+      alert("Товар добавлен (в будущем будет сохранён в базу):\\n" + JSON.stringify(item, null, 2));
+
+      // Здесь ты можешь добавить код для отправки на сервер или сохранения
+    });
   </script>
 </body>
 </html>
