--- a/public/admin.html
+++ b/public/admin.html
@@ -1,87 +1,49 @@
-<!DOCTYPE html><html lang="ru">
+<!DOCTYPE html>
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Добавить товар</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Админ-панель</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f0f0f0;
+      background: #f4f4f4;
       padding: 20px;
     }
-    .form-container {
-      background: #fff;
-      border-radius: 16px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      max-width: 400px;
+    .container {
+      max-width: 500px;
       margin: auto;
-      padding: 20px;
+      background: #fff;
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
     h2 {
       text-align: center;
       margin-bottom: 20px;
-      color: #333;
     }
-    label {
+    a.button {
       display: block;
-      margin-bottom: 6px;
-      font-weight: bold;
-    }
-    select, input {
-      width: 100%;
-      padding: 10px;
-      border-radius: 12px;
-      border: 1px solid #ccc;
-      margin-bottom: 15px;
-    }
-    button {
-      width: 100%;
-      padding: 12px;
-      background-color: #28a745;
+      padding: 15px;
+      margin: 10px 0;
+      background-color: #007bff;
       color: white;
-      font-size: 16px;
-      border: none;
-      border-radius: 14px;
-      cursor: pointer;
+      text-align: center;
+      text-decoration: none;
+      border-radius: 10px;
+      font-size: 18px;
     }
-    button:hover {
-      background-color: #218838;
+    a.button:hover {
+      background-color: #0056b3;
     }
   </style>
 </head>
 <body>
-  <div class="form-container">
-    <h2>➕ Добавить товар</h2>
-    <form action="/add" method="POST">
-      <label>Категория</label>
-      <select name="category" required>
-        <option value="iPhone">iPhone</option>
-        <option value="Samsung">Samsung</option>
-        <option value="Redmi">Redmi</option>
-        <option value="Realmi">Realmi</option>
-        <option value="Oppo">Oppo</option>
-        <option value="Vivo">Vivo</option>
-        <option value="Huawei">Huawei</option>
-        <option value="Honor">Honor</option>
-        <option value="Tecno">Tecno</option>
-        <option value="Infinix">Infinix</option>
-        <option value="ZTE">ZTE</option>
-        <option value="WIKO">WIKO</option>
-      </select><label>Название модели</label>
-  <input type="text" name="model" placeholder="Например: iPhone XR" required>
-
-  <label>Качество</label>
-  <select name="quality" required>
-    <option value="Original">Original</option>
-    <option value="OLED">OLED</option>
-    <option value="Incell">Incell</option>
-  </select>
-
-  <label>Цена</label>
-  <input type="text" name="price" placeholder="Например: 240 сомонӣ" required>
-
-  <button type="submit">💾 Сохранить товар</button>
-</form>
-
+  <div class="container">
+    <h2>🛠 Админ-панель</h2>
+    <a class="button" href="add.html">➕ Добавить товар</a>
+    <a class="button" href="products.html">✏️ Изменить / удалить товар</a>
+    <a class="button" href="orders.html">📋 Заказы клиентов</a>
   </div>
 </body>
 </html>
