--- a/public/orders.html
+++ b/public/orders.html
@@ -50,7 +50,7 @@
           el.innerHTML = 
             <div><span class="label">👤 Клиент:</span> ${order.name}</div>
             <div><span class="label">📱 Модели:</span> ${order.models.join(', ')}</div>
-            <div><span class="label">🔢 Количество:</span> ${order.quantity}</div>
+            <div><span class="label">🔗 Количество:</span> ${order.quantity}</div>
             <div><span class="label">💰 Общая сумма:</span> ${order.total} сомонӣ</div>
             <div><span class="label">💬 Комментарий:</span> ${order.comment || '—'}</div>
           ;
