--- a/public/catalog.html
+++ b/public/catalog.html
@@ -1,118 +1,86 @@
-<!DOCTYPE html>
-<html lang="ru">
+<!DOCTYPE html><html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Добавить товар</title>
+  <title>Каталог товаров</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f4;
+      background: #f3f3f3;
       margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    .container {
-      background: #fff;
       padding: 20px;
-      border-radius: 20px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      width: 90%;
-      max-width: 400px;
     }
     h2 {
       text-align: center;
-      color: #333;
       margin-bottom: 20px;
     }
-    label {
-      font-weight: bold;
-      display: block;
-      margin-top: 10px;
-      color: #333;
+    .category {
+      margin: 20px 0;
     }
-    select, input {
-      width: 100%;
-      padding: 10px;
-      margin-top: 5px;
-      border: 1px solid #ccc;
+    .product {
+      background: white;
+      padding: 15px;
+      margin-bottom: 10px;
       border-radius: 10px;
-      font-size: 16px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    .product div {
+      margin: 5px 0;
+    }
+    select, input[type=number], button {
+      width: 100%;
+      margin-top: 5px;
+      padding: 8px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
     }
     button {
-      margin-top: 20px;
-      width: 100%;
-      padding: 12px;
-      background: #28a745;
+      background-color: #007bff;
       color: white;
-      font-size: 18px;
       border: none;
-      border-radius: 10px;
+      font-weight: bold;
       cursor: pointer;
     }
     button:hover {
-      background: #218838;
+      background-color: #0056b3;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h2>➕ Добавить товар</h2>
-    <label for="category">Категория</label>
-    <select id="category">
-      <option value="">Выберите категорию</option>
-      <option value="iPhone">iPhone</option>
-      <option value="Samsung">Samsung</option>
-      <option value="Redmi">Redmi</option>
-      <option value="Realmi">Realmi</option>
-      <option value="Oppo">Oppo</option>
-      <option value="Vivo">Vivo</option>
-      <option value="Huawei">Huawei</option>
-      <option value="Honor">Honor</option>
-      <option value="Tecno">Tecno</option>
-      <option value="Infinix">Infinix</option>
-      <option value="ZTE">ZTE</option>
-      <option value="WIKO">WIKO</option>
-    </select>
-    <label for="model">Название модели</label>
-    <input type="text" id="model" placeholder="Например: iPhone XR">
+  <h2>📦 Каталог товаров</h2><label for="category-select">Выберите категорию:</label> <select id="category-select"> <option value="">-- Выберите --</option> <option value="iPhone"> iPhone</option> <option value="Samsung">Samsung</option> <option value="Redmi">Redmi</option> <option value="Realmi">Realmi</option> <option value="Oppo">Oppo</option> <option value="Vivo">Vivo</option> <option value="Huawei">Huawei</option> <option value="Honor">Honor</option> <option value="Tecno">Tecno</option> <option value="Infinix">Infinix</option> <option value="ZTE">ZTE</option> <option value="WIKO">WIKO</option> </select>
 
-    <label for="quality">Качество</label>
-    <select id="quality">
-      <option value="Original">Original</option>
-      <option value="OLED">OLED</option>
-      <option value="Incell">Incell</option>
-      <option value="HD+">HD+</option>
-      <option value="Incell Hd+">Incell Hd+</option>
-    </select>
+  <div id="product-list"></div>  <script>
+    let products = [];
 
-    <label for="price">Цена</label>
-    <input type="number" id="price" placeholder="Например: 240 сомони">
+    fetch('/products.json')
+      .then(res => res.json())
+      .then(data => {
+        products = data;
+      });
 
-    <button onclick="submitProduct()">💾 Сохранить товар</button>
-  </div>
+    document.getElementById('category-select').addEventListener('change', function () {
+      const selected = this.value;
+      const filtered = products.filter(p => p.category === selected);
+      const container = document.getElementById('product-list');
+      container.innerHTML = '';
 
-  <script>
-    function submitProduct() {
-      const data = {
-        category: document.getElementById('category').value,
-        model: document.getElementById('model').value,
-        quality: document.getElementById('quality').value,
-        price: document.getElementById('price').value
-      };
+      filtered.forEach((product, index) => {
+        const div = document.createElement('div');
+        div.className = 'product';
+        div.innerHTML = 
+          <div><strong>📱 Модель:</strong> ${product.model}</div>
+          <div><strong>✅ Качество:</strong> ${product.quality}</div>
+          <div><strong>💲 Цена:</strong> ${product.price} сомони</div>
+          <label>Количество</label>
+          <input type="number" id="qty-${index}" min="1" value="1">
+          <button onclick="addToOrder('${product.model}', ${product.price}, document.getElementById('qty-${index}').value)">➕ Добавить в заказ</button>
+        ;
+        container.appendChild(div);
+      });
+    });
 
-      if (!data.category || !data.model || !data.quality || !data.price) {
-        alert("Пожалуйста, заполните все поля.");
-        return;
-      }
-
-      const json = JSON.stringify(data);
-      const encoded = encodeURIComponent(json);
-      window.Telegram.WebApp.sendData(encoded);
+    function addToOrder(model, price, qty) {
+      alert(Товар добавлен: ${model}, Цена: ${price}, Кол-во: ${qty});
     }
-  </script>
-</body>
+  </script></body>
 </html>
