--- a/public/admin.html
+++ b/public/admin.html
@@ -1,49 +1,110 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Админ-панель</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>➕ Добавить товар</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f4;
-      padding: 20px;
+      background: #f3f3f3;
+      display: flex;
+      justify-content: center;
+      padding-top: 40px;
     }
-    .container {
-      max-width: 500px;
-      margin: auto;
-      background: #fff;
-      padding: 30px;
-      border-radius: 15px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    .form-box {
+      background: white;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      width: 90%;
+      max-width: 400px;
     }
     h2 {
       text-align: center;
       margin-bottom: 20px;
     }
-    a.button {
+    label {
+      font-weight: bold;
       display: block;
-      padding: 15px;
-      margin: 10px 0;
-      background-color: #007bff;
-      color: white;
-      text-align: center;
-      text-decoration: none;
-      border-radius: 10px;
-      font-size: 18px;
+      margin-top: 15px;
     }
-    a.button:hover {
-      background-color: #0056b3;
+    input, select, button {
+      width: 100%;
+      padding: 10px;
+      margin-top: 5px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+    }
+    button {
+      background-color: #28a745;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      margin-top: 20px;
+    }
+    button:hover {
+      background-color: #218838;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h2>🛠 Админ-панель</h2>
-    <a class="button" href="add.html">➕ Добавить товар</a>
-    <a class="button" href="products.html">✏️ Изменить / удалить товар</a>
-    <a class="button" href="orders.html">📋 Заказы клиентов</a>
+  <div class="form-box">
+    <h2>➕ Добавить товар</h2>
+    <label>Категория</label>
+    <select id="category">
+      <option value="">-- Выбери --</option>
+      <option>iPhone</option>
+      <option>Samsung</option>
+      <option>Redmi</option>
+      <option>Realmi</option>
+      <option>Oppo</option>
+      <option>Vivo</option>
+      <option>Huawei</option>
+      <option>Honor</option>
+      <option>Tecno</option>
+      <option>Infinix</option>
+      <option>ZTE</option>
+      <option>WIKO</option>
+    </select>
+
+    <label>Название модели</label>
+    <input type="text" id="model" placeholder="например, iPhone XR" />
+
+    <label>Качество</label>
+    <select id="quality">
+      <option value="">-- Выбери --</option>
+      <option>Original</option>
+      <option>OLED</option>
+      <option>Incell</option>
+      <option>HD+</option>
+    </select>
+
+    <label>Цена</label>
+    <input type="number" id="price" placeholder="например, 240" />
+
+    <button onclick="submitProduct()">💾 Сохранить товар</button>
   </div>
+
+  <script>
+    function submitProduct() {
+      const product = {
+        category: document.getElementById('category').value,
+        model: document.getElementById('model').value,
+        quality: document.getElementById('quality').value,
+        price: document.getElementById('price').value
+      };
+
+      if (!product.category  !product.model  !product.quality || !product.price) {
+        alert("Пожалуйста, заполните все поля.");
+        return;
+      }
+
+      const jsonData = JSON.stringify(product);
+      const tg = window.Telegram.WebApp;
+      tg.sendData(jsonData);
+      tg.close();
+    }
+  </script>
 </body>
 </html>
