--- a/public/catalog.html
+++ b/public/catalog.html
@@ -9,68 +9,63 @@
       margin: 0;
       padding: 20px;
       font-family: sans-serif;
-      background: linear-gradient(to bottom right, #00c6ff, #0072ff);
       color: white;
+      background-image: url('images/background.jpg');
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-attachment: fixed;
+      background-position: center;
+      position: relative;
     }
+
+    body::before, body::after {
+      content: '';
+      position: absolute;
+      top: 0; bottom: 0;
+      width: 20px;
+      z-index: 0;
+    }
+
+    body::before {
+      left: 0;
+      background: linear-gradient(to bottom, #ff0099, transparent);
+    }
+
+    body::after {
+      right: 0;
+      background: linear-gradient(to bottom, #00ffff, transparent);
+    }
+
     h1 {
       text-align: center;
-      margin-bottom: 10px;
+      font-size: 28px;
+      margin-top: 40px;
+      z-index: 1;
+      position: relative;
     }
-    h2 {
-      text-align: center;
-      margin-bottom: 30px;
-    }
-    .product-card {
-      background: rgba(255,255,255,0.1);
-      padding: 15px;
+
+    .card {
+      background: rgba(255, 255, 255, 0.05);
+      padding: 20px;
       border-radius: 16px;
-      margin: 15px 0;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+      margin-top: 30px;
+      box-shadow: 0 4px 10px rgba(255,0,0,0.3);
+      z-index: 1;
+      position: relative;
     }
-    .product-card h3 {
-      margin: 0 0 10px 0;
-    }
-    .product-card p {
-      margin: 6px 0;
-    }
-    .order-btn {
-      background: white;
-      color: #0072ff;
-      font-weight: bold;
-      border: none;
-      border-radius: 10px;
-      padding: 10px 16px;
-      cursor: pointer;
-      margin-top: 10px;
-      font-size: 16px;
+
+    .card h2 {
+      margin: 0 0 10px;
     }
   </style>
 </head>
 <body>
   <h1>📱 EKRAN.TJ-KBS</h1>
-  <h2>📦 Samsung</h2>
-  <div id="product-list"></div>
-
-  <script>
-    fetch('/products.json')
-      .then(res => res.json())
-      .then(data => {
-        const samsungProducts = data.filter(p => p.category === 'Samsung');
-        const container = document.getElementById('product-list');
-
-        samsungProducts.forEach(p => {
-          const div = document.createElement('div');
-          div.className = 'product-card';
-          div.innerHTML = 
-            <h3>📱 ${p.model}</h3>
-            <p>🛠 Качество: ${p.quality}</p>
-            <p>🏷 Бренд: KBS</p>
-            <p>💰 Цена: ${p.price} сомонӣ</p>
-            <button class="order-btn">🛒 Заказать</button>
-          ;
-          container.appendChild(div);
-        });
-      });
-  </script>
+  <div class="card">
+    <h2>📦 Samsung A10</h2>
+    <p>🛠 Качество: Original</p>
+    <p>🏷 Бренд: KBS</p>
+    <p>💰 Цена: 90 сомонӣ</p>
+  </div>
 </body>
 </html>
