--- a/public/catalog.html
+++ b/public/catalog.html
@@ -2,70 +2,140 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>EKRAN.TJ-KBS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Каталог товаров | EKRAN.TJ</title>
   <style>
     body {
-      margin: 0;
-      padding: 20px;
-      font-family: sans-serif;
-      color: white;
-      background-image: url('images/background.jpg');
-      background-repeat: no-repeat;
+      font-family: Arial, sans-serif;
+      background: url('./image/background.jpg') no-repeat center center fixed;
       background-size: cover;
-      background-attachment: fixed;
-      background-position: center;
-      position: relative;
-    }
-
-    body::before, body::after {
-      content: '';
-      position: absolute;
-      top: 0; bottom: 0;
-      width: 20px;
-      z-index: 0;
-    }
-
-    body::before {
-      left: 0;
-      background: linear-gradient(to bottom, #ff0099, transparent);
-    }
-
-    body::after {
-      right: 0;
-      background: linear-gradient(to bottom, #00ffff, transparent);
-    }
-
-    h1 {
-      text-align: center;
-      font-size: 28px;
-      margin-top: 40px;
-      z-index: 1;
-      position: relative;
-    }
-
-    .card {
-      background: rgba(255, 255, 255, 0.05);
+      color: white;
       padding: 20px;
-      border-radius: 16px;
-      margin-top: 30px;
-      box-shadow: 0 4px 10px rgba(255,0,0,0.3);
-      z-index: 1;
-      position: relative;
+      margin: 0;
     }
-
-    .card h2 {
-      margin: 0 0 10px;
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .category {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+      margin-bottom: 30px;
+    }
+    .category button {
+      padding: 10px 20px;
+      font-size: 16px;
+      border-radius: 10px;
+      border: none;
+      background-color: #ff4b2b;
+      color: white;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    .category button:hover {
+      background-color: #ff416c;
+    }
+    .product {
+      background: rgba(0, 0, 0, 0.4);
+      padding: 15px;
+      margin: 10px auto;
+      border-radius: 10px;
+      max-width: 400px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    }
+    .product div {
+      margin: 5px 0;
+    }
+    input[type="number"] {
+      width: 100%;
+      padding: 8px;
+      border-radius: 6px;
+      border: none;
+      margin-top: 8px;
+    }
+    button.add-btn {
+      background-color: #28a745;
+      color: white;
+      padding: 10px;
+      width: 100%;
+      margin-top: 10px;
+      font-weight: bold;
+      border-radius: 8px;
+      border: none;
+    }
+    .welcome {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+    .welcome h2 {
+      font-size: 26px;
+      background: linear-gradient(90deg, #ff4b2b, #ff416c);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+    .welcome p {
+      font-size: 18px;
+      color: #ffffffb3;
+      margin: 5px 0;
     }
   </style>
 </head>
 <body>
-  <h1>📱 EKRAN.TJ-KBS</h1>
-  <div class="card">
-    <h2>📦 Samsung A10</h2>
-    <p>🛠 Качество: Original</p>
-    <p>🏷 Бренд: KBS</p>
-    <p>💰 Цена: 90 сомонӣ</p>
+  <div class="welcome">
+    <h2>👋 Хуш омадед ба <b>EKRAN.TJ - KBS</b></h2>
+    <p>📱 Мо беҳтарин экранҳоро барои ҳамаи телефонҳо пешниҳод мекунем</p>
+    <p>🛠 Бренди боэътимоди <b style="color: #ff7777;">KBS</b> кафолати равшании аъло ва устуворӣ мебошад!</p>
   </div>
+
+  <div class="category" id="category-buttons"></div>
+  <div id="product-list"></div>
+
+  <script>
+    let products = [];
+
+    fetch('/products.json')
+      .then(res => res.json())
+      .then(data => {
+        products = data;
+        const categories = [...new Set(products.map(p => p.category))];
+        const catContainer = document.getElementById('category-buttons');
+        categories.forEach(cat => {
+          const btn = document.createElement('button');
+          btn.textContent = cat;
+          btn.onclick = () => renderProducts(cat);
+          catContainer.appendChild(btn);
+        });
+      });
+
+    function renderProducts(category) {
+      const filtered = products.filter(p => p.category === category);
+      const container = document.getElementById('product-list');
+      container.innerHTML = '';
+      filtered.forEach((product, index) => {
+        const div = document.createElement('div');
+        div.className = 'product';
+        div.innerHTML = `
+          <div><strong>📱 Модель:</strong> ${product.model}</div>
+          <div><strong>✅ Качество:</strong> ${product.quality}</div>
+          <div><strong>💲 Цена:</strong> ${product.price} сомонӣ</div>
+          <label>Количество</label>
+          <input type="number" id="qty-${index}" min="1" value="1">
+          <button class="add-btn" onclick="addToOrder('${product.model}', ${product.price}, document.getElementById('qty-${index}').value)">➕ Добавить в заказ</button>
+        `;
+        container.appendChild(div);
+      });
+    }
+
+    function addToOrder(model, price, qty) {
+      alert(`✅ Добавлено в заказ:
+Модель: ${model}
+Цена: ${price} сомонӣ
+Количество: ${qty}`);
+    }
+  </script>
 </body>
 </html>
